--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+        <finalName>intens</finalName>
     </build>
-
 </project>
