--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -17,6 +17,7 @@ jobs:
       - name: setup
         uses: actions/setup-java@v2
         with:
+          distribution: 'adopt'
           java-version: 1.8
 
       - name: run-tests
