--- a/.github/workflows/pull.yml
+++ b/.github/workflows/pull.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/setup-java@v2
         with:
           distribution: 'adopt'
-          java-version: 1.8
+          java-version: '8.0.412+8'
 
       - name: run-tests
         run: mvn test
